# library

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
tests/: test_validator.py
tests/test_validator/: iphone_16_invalid.json  iphone_16_valid.json
