[tool.poetry]
name = "library"
version = "25.1.0"  # Format "YY.MM.Patch"
description = "Product Forms Library"
authors = ["Nor El Houda Saidouche <saidouche.norelhouda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.23.0"
json-schema-for-humans = "^1.0.2"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
